samples/_failures_safe/1761450226_9f28ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_708ccc0c.c:146:1: error: expected identifier or ‘(’ at end of input
  146 | void
      | ^~~~
